[package]
name = "libbsd-sys"
version = "0.2.1"
categories = ["external-ffi-bindings", "no-std"]
documentation = "https://docs.rs/libbsd-sys"
edition = "2024"
exclude = [".github/**", ".gitignore", "githooks"]
keywords = ["libbsd", "ffi", "strlcpy", "strlcat", "readpassphrase"]
license = "MIT OR Apache-2.0 OR ISC"
links = "bsd"
readme = "README.md"
repository = "https://github.com/mrdomino/libbsd-sys"
rust-version = "1.85"
description = "Raw FFI bindings to libbsd"

[features]
# Link libbsd statically (Linux only; ignored on native BSDs).
static = []
# Use libbsd overlay mode (Linux only).  In overlay mode the libbsd headers
# shadow the standard C headers, so downstream -sys crates that compile C code
# can use plain `<string.h>` instead of `<bsd/string.h>`.  The build script
# probes `libbsd-overlay` instead of `libbsd` via pkg-config.
overlay = []

[dependencies]
libc = "0.2"

[build-dependencies]
pkg-config = "0.3"
